services/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: innowise
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: pandarick9/orderservice:9783a8c41bc6ea9e9944d9f8d50f3d72c2ec42e5
          ports:
            - containerPort: 8078
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          readinessProbe:
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            failureThreshold: 3
            httpGet:
              scheme: HTTP
              path: /orders/actuator/health/readiness
              port: 8078

          livenessProbe:
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            failureThreshold: 3
            httpGet:
              scheme: HTTP
              path: /orders/actuator/health/liveness
              port: 8078

---

apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: innowise
  labels:
    app: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: http
      port: 8078
      targetPort: 8078
